--- a/src/Pages/abc.css
+++ b/src/Pages/abc.css
@@ -4,40 +4,35 @@
     /* border-radius: 10px; */
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.725);
   }
-img{
-  width:100%;
-  height: 100%  ;
-}
+
+
   .project-image-container {
-    width: 100%;
-    height: 100vh;
-    
+    width: auto;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
   }
   
-  .project-image {
-    width: 100%;
-    height: auto;
-    
-  }
+  
   
   .project-card-overlay {
-    position: absolute;
-    top: 25%; 
-    left: 25%;
+    position: relative;
+    top: 10%; 
+    left: 2%;
     width: 100vh;
     
-    height: fit-content;
+    height: 15rem;
     background: rgba(255, 255, 255, 0.614);
     transition: all 0.5s ease-in-out;
     opacity: 0;
-    display: flex;
-    align-items: center;
+    /* display: flex; */
+    /* align-items: center; */
     justify-content: center;
   }
   
   .project-card:hover .project-card-overlay {
     opacity: 1;
-    
+
     
     /* align-self: center; */
   }
@@ -49,42 +44,42 @@ img{
     flex-direction: column;
   }
   
-  .project-title {
+ .project-title {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: 700;
     display: flex;
     flex-direction:column;
-  }
+  } 
   
   .project-description {
     position: relative !important;
     
     font-size: 1rem;
-    display: flex;  
+    
   }
-.c1{
-  top: 60vh;
+/* .c1{
+  top: 5vh;
 }
 .c2
 {
-  top: 0;
-  
+  top: 10vh;
+ 
+  left: 5em;
 }
+
 .c3{
-  top: 30vh;
-}
+  top: 3vh;
+  
+  
+} */
 .dd{
   
   align-self: center;
-  width:auto;
+  width:auto; 
   border-radius: 20px;
 }
-p{
-  padding: 0;
-  /* margin: 2%; */
-  margin: 0;
-}
+
 
 .ggg{
   height: 130vh;
@@ -92,7 +87,7 @@ p{
   
   
 }
-.divv{
+ .divv{
   display: flex;
 }
 .A45{
